# CMIG

./: .gitignore  CMIG_명세서_v3.0.md  README.md  pyproject.toml
REVIEW/: CMIG_COMETS_dfba_spatial_notes_2026-06-05.md  CMIG_agent_eval_2026-06-02.md  CMIG_publication_visualization_strategy_2026-06-02.md  CMIG_v3_codereview_gaps_2026-06-01.md  CMIG_v3_debug_bughunt_2026-06-02.md  CMIG_v3_fix_rereview_2026-06-02.md  CMIG_v3_implementation_review.md  CMIG_v3_update_review_2026-06-01.md
cmig/: __init__.py  golden_fixture.py  synthetic_host.py  synthetic_pair.py
cmig/cli/: __init__.py  main.py
cmig/core/: __init__.py  delta.py  dfba.py  diagnostics.py  engine.py  fva.py  golden.py  host.py  host_impact.py  interaction_figures.py  interactions.py  manifest.py  matrix.py  medium.py  medium_spec.py  metrics.py  model_pool.py  namespace.py  pair.py  run_store.py  sandbox.py  search.py  search_advanced.py  search_ga.py  search_product.py  sign.py  single_model.py  solver.py  spatial.py  stats.py  stats_embed.py  sweep.py  targets.py  tidy.py
cmig/gui/: __init__.py  app.py  builder.py  editors.py  graph_data.py  graph_view.py  host_view.py  views.py
cmig/gui/assets/: graph.html
cmig/io/: __init__.py  model_import.py  solve_output.py
cmig/render/: __init__.py  client.py  composer.py
cmig/render_r/: chord.R  figure.R  heatmap.R  network.R
cmig/service/: __init__.py  engine_service.py  jobrunner.py  outcome.py  store.py
docs/: cmig_workflow_tutorial.html  sample_external_profile.svg.figure_spec.json
docs/00-pm/: cmig-community-core.prd.md
docs/01-plan/: glossary.md  schema.md
docs/archive/2026-05/: _INDEX.md
docs/archive/2026-05/cmig-community-core/: cmig-community-core.analysis.md  cmig-community-core.design.md  cmig-community-core.plan.md  cmig-community-core.report.md
docs/archive/2026-06/: _INDEX.md
docs/decisions/: 2026-06-01-golden-solver-list.md  2026-06-01-host-config-b.md  2026-06-01-r-figure-deps-lock.md
fixtures/pair_acetate_butyrate/: README.md
fixtures/pair_acetate_butyrate/expected/: config.json  edges.parquet  nodes.parquet  profile.parquet
medium_presets/: README.md  high_fiber.csv  western_diet.csv
tests/: conftest.py  test_app_shell.py  test_cli_solve.py  test_cli_solve_medium.py  test_cli_targets.py  test_cli_workflows.py  test_community_fva.py  test_delta.py  test_dfba.py  test_diagnostic_unified.py  test_diagnostics.py  test_e2e_pipeline.py  test_engine_golden.py  test_figure_composer.py  test_filesystem_store.py  test_foundations_review_regressions.py  test_fva.py  test_gene_ko_screen.py  test_graph_data.py  test_gui_editors_builder.py  test_gui_render.py  test_gui_views.py  test_host.py  test_host_view.py  test_jobrunner.py  test_medium.py  test_medium_spec.py  test_metrics.py  test_model_import.py  test_namespace_gate.py  test_pair.py  test_pair_acetate_butyrate.py  test_recon3d_host.py  test_render.py  test_review_regressions.py  test_robustness.py  test_run_hash.py  test_sandbox.py  test_sandbox_fva.py  test_schema_migration.py  (+13 more)
(+92 files in other folders)
